erDiagram
    CUSTOMER ||--o{ ORDER : places
    CUSTOMER {
        int id PK
        text email UK
        int phone
        text first_name
        text last_name
    }
    ORDER {
        int id PK
        int address_id FK
        int cust_id FK
        text date
        text status
    }
    ORDER_LINE {
        string sku FK
        int order_id FK
        int quantity
        float unit_price
    }
    PRODUCT {
        int sku PK
        double price
        int stock
    }
    ADDRESS {
        int address_id FK
        int number
        text street_name
        int zipcode
        text city
        text state
    }
    CUSTOMER_ADRESS {
        int customer_id FK
        int address_id FK
    }
    ORDER ||--|{ ORDER_LINE : contains
    ORDER_LINE |{--}o PRODUCT: contains
    CUSTOMER |{--}| ADDRESS: has

